--- a/index.html
+++ b/index.html
@@ -2,80 +2,184 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Lumi AI — Your Anime AI Friend</title>
+  <title>Lumi AI — Landing + Realistic Chat Preview</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { margin:0; font-family:system-ui, sans-serif; background:#0b1220; color:#e5e7eb; text-align:center; }
-    header { padding:60px 20px; }
-    h1 { font-size:2.5rem; margin:0; }
-    p { color:#9ca3af; font-size:1.2rem; max-width:600px; margin:20px auto; }
-    .hero-avatar { width:220px; margin:30px auto; }
-    .btn { display:inline-block; margin:10px; padding:12px 20px; border-radius:8px; text-decoration:none; font-weight:bold; }
-    .btn-primary { background:#6366f1; color:white; }
-    section { padding:60px 20px; max-width:900px; margin:0 auto; }
-    .pricing { display:grid; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); gap:20px; }
-    .card { background:#111827; padding:20px; border-radius:12px; border:1px solid #1f2937; }
+    :root{
+      --bg:#0b1220; --panel:#0f172a; --border:#1f2937; --ink:#e5e7eb; --muted:#9ca3af; --accent:#6366f1;
+      --user:#1c2a52; --lumi:#0f172a; --userBorder:#2a3b6f; --lumiBorder:#1f2937;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:system-ui,Segoe UI,Roboto,Inter,Arial;background:var(--bg);color:var(--ink);text-align:center}
+    header{padding:56px 20px}
+    h1{margin:0;font-size:2.4rem}
+    p.lead{color:var(--muted);font-size:1.15rem;max-width:640px;margin:14px auto 0}
+    .hero{width:220px;aspect-ratio:1/1.2;border-radius:18px;background:linear-gradient(180deg,#111827,#0b1324);border:1px solid var(--border);display:grid;place-items:center;margin:24px auto;box-shadow:0 20px 60px rgba(0,0,0,.35)}
+    .btn{display:inline-block;margin:10px;padding:12px 18px;border-radius:10px;text-decoration:none;font-weight:600}
+    .btn.primary{background:var(--accent);color:#fff}
+    section{padding:56px 20px;max-width:980px;margin:0 auto}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:18px}
+    .card{background:var(--panel);border:1px solid var(--border);border-radius:12px;padding:18px}
 
     /* Chat preview */
-    .chat-preview { background:#111827; border:1px solid #1f2937; border-radius:12px; padding:20px; max-width:420px; margin:40px auto; text-align:left; font-size:14px; }
-    .msg { padding:10px 14px; margin:10px 0; border-radius:12px; display:inline-block; max-width:75%; white-space:pre-wrap; word-wrap:break-word; }
-    .msg.user { background:#1c2a52; margin-left:auto; display:block; }
-    .msg.lumi { background:#0f172a; border:1px solid #1f2937; display:block; margin-right:auto; }
-    .typing { border-right:2px solid #e5e7eb; display:inline-block; animation:blink 1s step-start infinite; }
-    @keyframes blink { 50% { border-color: transparent; } }
+    .chat-wrap{max-width:420px;margin:32px auto;background:var(--panel);border:1px solid var(--border);border-radius:16px;overflow:hidden;text-align:left}
+    .chat-top{display:flex;align-items:center;gap:10px;border-bottom:1px solid var(--border);padding:10px 12px}
+    .chat-title{font-size:.95rem}
+    .chat-body{height:420px;overflow:auto;padding:14px 12px;display:flex;flex-direction:column;gap:10px}
+    .row{display:flex;gap:8px;align-items:flex-end}
+    .row.user{justify-content:flex-end}
+    .avatar{width:34px;height:34px;border-radius:50%;flex:0 0 34px;display:grid;place-items:center;border:1px solid var(--border);background:#162036;font-size:.8rem;color:#cbd5e1}
+    .avatar.lumi{background:#1a1f2e}
+    .bubble{max-width:70%;padding:10px 12px;border-radius:14px;font-size:.95rem;line-height:1.3;border:1px solid transparent}
+    .bubble.lumi{background:var(--lumi);border-color:var(--lumiBorder);border-top-left-radius:6px}
+    .bubble.user{background:var(--user);border-color:var(--userBorder);border-top-right-radius:6px}
+    .meta{font-size:.72rem;color:var(--muted);margin-top:2px}
+    .typing{display:inline-block;width:28px}
+    .dot{display:inline-block;width:6px;height:6px;margin:0 1px;background:#94a3b8;border-radius:999px;opacity:.35;animation:blink 1.2s infinite}
+    .dot:nth-child(2){animation-delay:.2s}.dot:nth-child(3){animation-delay:.4s}
+    @keyframes blink{0%,100%{opacity:.35}50%{opacity:1}}
   </style>
 </head>
 <body>
   <header>
-    <img src="https://via.placeholder.com/220x260.png?text=Lumi+Avatar" class="hero-avatar" alt="Lumi avatar"/>
+    <div class="hero">
+      <!-- simple MVP avatar -->
+      <svg width="70%" viewBox="0 0 220 300" aria-hidden="true">
+        <circle cx="110" cy="130" r="90" fill="#ffd9c7" stroke="#1f2937" stroke-width="2"/>
+        <circle cx="80" cy="130" r="10" fill="#111827"/>
+        <circle cx="140" cy="130" r="10" fill="#111827"/>
+        <rect x="80" y="175" width="60" height="24" rx="12" fill="#424a5a"/>
+      </svg>
+    </div>
     <h1>Meet Lumi</h1>
-    <p>Your anime AI friend — chat, talk, and customize her with skins.</p>
-    <a href="#" class="btn btn-primary">Download on iOS</a>
-    <a href="#" class="btn btn-primary">Download on Android</a>
+    <p class="lead">Your anime AI friend — chat, talk, and customize with skins. Available on iOS & Android.</p>
+    <a href="#" class="btn primary">Download on iOS</a>
+    <a href="#" class="btn primary">Download on Android</a>
   </header>
 
-  <!-- Chat Preview -->
   <section>
-    <h2 style="margin-bottom:20px;">See Lumi in action</h2>
-    <div class="chat-preview" id="chatPreview">
-      <div class="msg user">Hey Lumi, how was your day?</div>
-      <div class="msg lumi" id="typing"><span></span><span class="typing"></span></div>
+    <h2 style="margin:0 0 20px">See Lumi in action</h2>
+
+    <!-- Chat Preview (script below drives the animation) -->
+    <div class="chat-wrap" id="chat">
+      <div class="chat-top">
+        <div class="avatar lumi">🟣</div>
+        <div>
+          <div class="chat-title">Lumi</div>
+          <div class="meta">online · typing preview</div>
+        </div>
+      </div>
+      <div class="chat-body" id="chatBody"></div>
     </div>
   </section>
 
   <section>
-    <h2>Features</h2>
-    <p>✨ Voice-to-voice AI chat<br/>🎨 Customizable anime skins<br/>🎧 Always there for you</p>
-  </section>
-
-  <section>
-    <h2>Pricing</h2>
-    <div class="pricing">
-      <div class="card"><h3>Free</h3><p>10 voice chats/day<br/>Unlimited text<br/>Ads included</p></div>
-      <div class="card"><h3>Premium</h3><p>$4.99/mo<br/>Unlimited chat & voice<br/>Premium voices & skins</p></div>
-      <div class="card"><h3>Pro</h3><p>$9.99/mo<br/>All features<br/>Exclusive skins + voices</p></div>
+    <h2 style="margin:0 0 10px">Why people love Lumi</h2>
+    <div class="cards">
+      <div class="card">✨ Voice-to-voice AI chat that feels natural.</div>
+      <div class="card">🎨 Skins & styles — make Lumi your own.</div>
+      <div class="card">🧠 Smarter every day, always by your side.</div>
     </div>
   </section>
 
-  <footer style="padding:40px; color:#9ca3af;">
-    Join our <a href="#" style="color:#6366f1;">Discord</a> | © 2025 Lumi
-  </footer>
+  <section>
+    <h2 style="margin:0 0 10px">Pricing</h2>
+    <div class="cards">
+      <div class="card"><h3>Free</h3><p>10 voice chats/day · Unlimited text · Ads</p></div>
+      <div class="card"><h3>Premium</h3><p>$4.99/mo · Unlimited voice & text · Premium voices & skins · No ads</p></div>
+      <div class="card"><h3>Pro</h3><p>$9.99/mo · Bigger memory · Exclusive skins/voices · Early features</p></div>
+    </div>
+  </section>
+
+  <footer style="padding:40px;color:#9ca3af">Join our <a href="#" style="color:#6366f1">Discord</a> · © 2025 Lumi</footer>
 
 <script>
-  const text = "It was peaceful 🌙 I was waiting for you to come chat 💜";
-  const typingEl = document.querySelector("#typing span:first-child");
-  let i = 0;
+/**
+ * Realistic chat preview
+ * - Alternates user and Lumi messages
+ * - Lumi types with dot indicator then reveals text letter-by-letter
+ * - Whole sequence ~= 15s then loops
+ */
 
-  function typeEffect(){
-    if(i < text.length){
-      typingEl.textContent += text.charAt(i);
-      i++;
-      setTimeout(typeEffect, 60); // speed
+const chatBody = document.getElementById("chatBody");
+
+// Conversation script (feel free to tweak text)
+const script = [
+  { role:"user", text:"Hey Lumi, how was your day?" },
+  { role:"lumi", text:"Peaceful 🌙 I was waiting for you to drop by." },
+  { role:"user", text:"Can you help me plan a cozy weekend?" },
+  { role:"lumi", text:"Totally! Movies + ramen + a night walk? I’ll make a cute checklist." },
+  { role:"user", text:"Deal. Also… new pink skin when?" },
+  { role:"lumi", text:"Soon 💖 Limited drop next week. Want early access?" }
+];
+
+// Helpers
+function el(tag, cls, text){ const d=document.createElement(tag); if(cls) d.className=cls; if(text) d.textContent=text; return d; }
+function addBubble(role, text){
+  const row = el("div","row"+(role==="user"?" user":""));
+  const avatar = el("div","avatar "+(role==="lumi"?"lumi":""), role==="lumi"?"🟣":"YOU");
+  const bubble = el("div","bubble "+(role==="lumi"?"lumi":"user"));
+  bubble.textContent = text;
+  if(role==="lumi"){ row.appendChild(avatar); row.appendChild(bubble); }
+  else { row.appendChild(bubble); row.appendChild(avatar); }
+  chatBody.appendChild(row);
+  chatBody.scrollTop = chatBody.scrollHeight;
+}
+function addTyping(){
+  const row = el("div","row");
+  const avatar = el("div","avatar lumi","🟣");
+  const bubble = el("div","bubble lumi");
+  const typing = el("span","typing");
+  typing.innerHTML = '<span class="dot"></span><span class="dot"></span><span class="dot"></span>';
+  bubble.appendChild(typing);
+  row.appendChild(avatar); row.appendChild(bubble);
+  chatBody.appendChild(row);
+  chatBody.scrollTop = chatBody.scrollHeight;
+  return row; // return the typing row so we can replace it
+}
+async function typeText(targetEl, text, speed=22){
+  targetEl.textContent = "";
+  for (let i=0;i<text.length;i++){
+    targetEl.textContent += text[i];
+    await new Promise(r=>setTimeout(r, speed));
+  }
+}
+
+async function playOnce(){
+  chatBody.innerHTML = "";
+  const start = performance.now();
+
+  for (let i=0;i<script.length;i++){
+    const {role, text} = script[i];
+
+    if(role==="user"){
+      addBubble("user", text);
+      await new Promise(r=>setTimeout(r, 500)); // tiny pause
     } else {
-      setTimeout(()=>{ typingEl.textContent=""; i=0; typeEffect(); }, 4000); // reset after 4s
+      const typingRow = addTyping();
+      // simulate thinking
+      await new Promise(r=>setTimeout(r, 650));
+      // swap typing with real message + type it
+      const bubble = typingRow.querySelector(".bubble");
+      bubble.innerHTML = ""; // clear dots
+      const span = el("span", null, "");
+      bubble.appendChild(span);
+      await typeText(span, text, 24);
+      // small pause after reply
+      await new Promise(r=>setTimeout(r, 350));
     }
   }
-  typeEffect();
+
+  // total loop length target ~15s: if too fast, wait the remainder
+  const elapsed = performance.now() - start; // ms
+  const target = 15000; // 15s
+  const remaining = Math.max(0, target - elapsed);
+  await new Promise(r=>setTimeout(r, remaining));
+}
+
+(async function loop(){
+  while(true){ await playOnce(); }
+})();
 </script>
 </body>
 </html>
